--- a/DnsTestApp/DnsTestApp/bin/DnsTestApp.dll.config
+++ b/DnsTestApp/DnsTestApp/bin/DnsTestApp.dll.config
@@ -28,6 +28,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="DnsTestContext" connectionString="Server=YAGUARVL-PC\TESTSQL;Database=dnsTestDb;User Id=sa;
-Password=sqls;" providerName="System.Data.SqlClient" />
+Password=sql;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
